--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     {% block head%}{% endblock head%}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <title> The URL Shortener | {% block title %}{% endblock title %}</title>
 </head>
 <body>
