--- a/templates/input.html
+++ b/templates/input.html
@@ -15,7 +15,7 @@
 {% for url in all_urls|reverse %}
     <div>
         <p>Long url: {{url[1]}}</p>
-        <p>Short url: <a href="https://immense-lake-41444.herokuapp.com/{{url[2]}}">http://127.0.0.1:5000/{{url[2]}}</a></p>
+        <p>Short url: <a href="https://immense-lake-41444.herokuapp.com/{{url[2]}}">https://immense-lake-41444.herokuapp.com/{{url[2]}}</a></p>
     </div>
 {% endfor %}
 {% endblock content %}
